# lamerhelper

./: .gitignore  README.md  index.html  package.json  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/core/: api.rs  logger.rs  mod.rs  plugin.rs  registry.rs  settings.rs
src-tauri/src/plugins/: contextmenu_classic_plugin.rs  cursor_highlight_plugin.rs  network_tools_plugin.rs  temp_cleaner_plugin.rs  test_plugin.rs
src/components/: ConsolePanel.vue  PluginList.vue  PluginPanel.vue  SettingsPanel.vue
src/components/settings/: SettingBoolean.vue  SettingColor.vue  SettingNumber.vue  SettingSelect.vue  SettingText.vue
